rewording JPMS temporary params handling